@@ -1,3 +1,8 @@
+2006-11-01  Alan Modra  <amodra@bigpond.net.au>
+
+	* elf32-arm.c (bfd_elf32_arm_process_before_allocation): Correct
+	check for PLT usage.
+
 2006-11-01  Daniel Jacobowitz  <dan@codesourcery.com>
 
 	* elfxx-mips.c (mips_elf_merge_gots): Always use maxcnt.
